src/test/deca/context/invalid/double_dec_class.deca
class A{
    int a;
}

class A{
    void x;
}